--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Week2 Tasks</h1>
     <ul>
-        <li><a href="task_js/index.html" target="_blank" >Pure</a></li>
+        <li><a href="task_js/about.html" target="_blank" >Pure</a></li>
         <li><a href="task_react/index.html" target="_blank" >React</a></li>
     </ul>
 </body>
